RESOLVED FIXED54157
[GTK] Default error page is interfering with tests which require failed loads
https://bugs.webkit.org/show_bug.cgi?id=54157
Summary [GTK] Default error page is interfering with tests which require failed loads
Martin Robinson
Reported 2011-02-09 18:11:00 PST
In tests where a failed load is the expected behavior, the error page will often cause the test to fail or timeout by triggering an unexpected load.
Attachments
Patch (4.62 KB, patch)
2011-02-09 18:21 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-02-09 18:21:14 PST
Gustavo Noronha (kov)
Comment 2 2011-02-09 18:25:04 PST
Comment on attachment 81908 [details] Patch Good catch!
WebKit Commit Bot
Comment 3 2011-02-10 04:27:23 PST
Comment on attachment 81908 [details] Patch Rejecting attachment 81908 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-7', 'apply-..." exit_code: 2 Last 500 characters of output: ests/platform/gtk/fast/dom/null-document-location-put-crash-expected.txt rm 'LayoutTests/platform/gtk/fast/dom/null-document-location-put-crash-expected.txt' patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/gtk/DumpRenderTree.cpp Hunk #1 succeeded at 742 (offset 3 lines). Hunk #2 succeeded at 1013 (offset 3 lines). Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Gustavo Noronha Silva'..." exit_code: 1 Full output: http://queues.webkit.org/results/7869288
Martin Robinson
Comment 4 2011-02-10 08:46:38 PST
Martin Robinson
Comment 5 2011-02-10 08:46:47 PST
*** Bug 54183 has been marked as a duplicate of this bug. ***
Martin Robinson
Comment 6 2011-02-10 17:22:39 PST
*** Bug 54020 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.