2011-02-09  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] Default error page is interfering with tests which require failed loads
        https://bugs.webkit.org/show_bug.cgi?id=54157

        Unskip passing tests and remove some bogus expected results.

        * platform/gtk/Skipped: Unskip some tests which are now passing.
        * platform/gtk/fast/dom/null-document-location-put-crash-expected.txt: Removed.
2011-02-09  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Default error page is interfering with tests which require failed loads
        https://bugs.webkit.org/show_bug.cgi?id=54157

        Disable the default error page during DRT runs. This prevents unexpected loads
        from interfering with tests that have planned failed loads.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (webViewLoadError): Added, disable default handler.
        (createWebView): Connect the new load-error handler.

Canonical link: https://commits.webkit.org/68246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78228 268f45cc-cd09-0410-ab3c-d52691b4dbfc